--- a/app/src/main/res/layout/_get_started.xml
+++ b/app/src/main/res/layout/_get_started.xml
@@ -18,33 +18,43 @@
         app:srcCompat="@drawable/getstarted"
         tools:layout_editor_absoluteY="92dp" />
 
+    <View
+        android:id="@+id/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@color/dark_bg"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
-        android:id="@+id/Back"
+        android:id="@+id/btnBackGetStarted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/roboto"
         android:text="Back"
-
-        android:textColor="#EAEBEF"
-        android:textSize="24sp"
-        app:backgroundTint="#303135"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textAllCaps="false"
+        android:textColor="@color/light_txt"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="310dp"
-        android:layout_height="56dp"
-        android:gravity="center"
-        android:text="@string/south_african_startup_hub"
-        android:textColor="#EAEBEF"
+        android:id="@+id/textView44"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="30dp"
+        android:fontFamily="@font/roboto"
+        android:text="South African Startup Hub"
+        android:textAlignment="center"
+        android:textColor="@color/light_txt"
         android:textSize="24sp"
-        app:drawableTint="#303135"
-        app:layout_constraintStart_toEndOf="@id/Back"
-        app:layout_constraintTop_toTopOf="@id/Back"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/textView8"
@@ -64,7 +74,7 @@
     <TextView
         android:id="@+id/textView9"
         android:layout_width="311dp"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center|top"
         android:text="Find your golden goose!"
@@ -74,16 +84,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView8" />
 
+
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="385dp"
         android:layout_height="22dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="26dp"
         android:gravity="start"
         android:text="How it works"
         android:textColor="#EAEBEF"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,56 +103,58 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="384dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="20dp"
         android:gravity="start"
-        android:text="Lorem ipsum"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
         android:textColor="#EAEBEF"
-        android:textSize="14sp"
+        android:textSize="15sp"
         app:drawableTint="#303135"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/textView3"
         app:layout_constraintTop_toBottomOf="@id/textView3" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="385dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="18dp"
         android:gravity="start"
         android:text="Benefits"
         android:textColor="#EAEBEF"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:drawableTint="#303135"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/textView4"
         app:layout_constraintTop_toBottomOf="@id/textView6"/>
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="380dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginTop="4dp"
         android:gravity="start"
-        android:text="Lorem ipsum"
+        android:text="Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
         android:textColor="#EAEBEF"
-        android:textSize="14sp"
+        android:textSize="15sp"
         app:drawableTint="#303135"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/textView5"
         app:layout_constraintTop_toBottomOf="@id/textView5" />
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="385dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="18dp"
         android:gravity="start"
         android:text="Costs"
         android:textColor="#EAEBEF"
-        android:textSize="14sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,39 +162,45 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="380dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="4dp"
         android:gravity="start"
-        android:text="Lorem ipsum"
+        android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo."
         android:textColor="#EAEBEF"
-        android:textSize="14sp"
+        android:textSize="15sp"
         app:drawableTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView10" />
+
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnSignUpInvestor"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="sans-serif-medium"
         android:text="Sign up as investor"
+        android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#202125"
+        android:textColor="@color/dark_txt"
+        android:textSize="24sp"
         app:backgroundTint="#FFB700"
         app:iconTint="#303135"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView7" />
+        app:layout_constraintBottom_toTopOf="@id/gets_botbar" />
 
     <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="514dp"
-        android:layout_height="139dp"
+        android:id="@+id/gets_botbar"
+        android:layout_width="match_parent"
+        android:layout_height="73dp"
         app:srcCompat="@drawable/getstartedbuttons"
         tools:layout_editor_absoluteX="4dp"
         tools:layout_editor_absoluteY="584dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button3"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
