--- a/app/src/main/res/layout/_about.xml
+++ b/app/src/main/res/layout/_about.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto"
         android:text="South African Startup Hub"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="30dp"
         android:textColor="@color/light_txt"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -54,15 +54,15 @@
 
     <Button
         android:id="@+id/closeAbout"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/roboto"
         android:text="x"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#EAEBEF"
-        android:textSize="24sp"
-        app:backgroundTint="#303135"
+        android:textAllCaps="false"
+        android:textColor="@color/light_txt"
+        android:textSize="14sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
