--- a/app/src/main/res/layout/_profile.xml
+++ b/app/src/main/res/layout/_profile.xml
@@ -20,6 +20,21 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:textAlignment="center"
+        android:textColor="@color/light_txt"
+        android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="My Profile"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -97,7 +112,7 @@
         android:layout_height="83dp"
         android:layout_marginStart="20dp"
         android:gravity="start"
-        android:text="Madis Kaljurand"
+        android:text="Jane Smith"
         android:textColor="#EAEBEF"
         android:textSize="14sp"
         app:drawableTint="#303135"
@@ -133,7 +148,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:gravity="start"
-        android:text="madis.kaljurand@tlu.ee"
+        android:text="janesmith@digitaleconomy.ee"
         android:textColor="#EAEBEF"
         android:textSize="14sp"
         app:drawableTint="#303135"
@@ -203,7 +218,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:gravity="start"
-        android:text="Lorem ipsum OÜ"
+        android:text="BtoB Digital Economy"
         android:textColor="#EAEBEF"
         android:textSize="14sp"
         app:drawableTint="#303135"
